==> mindThomas/STM32-libraries/Periphirals/STM32F0/SPI/SPI.cpp <==
#include "SPI.h"
#include "Priorities.h"
#include "Debug.h"
#include <math.h>
#include <string.h> // for memset

void SPI::DeInitPeripheral()
{
	if (!_hRes) return;
	if (_hRes->port == PORT_SPI2) {
		/* Peripheral clock disable */
		LL_APB1_GRP1_DisableClock(LL_APB1_GRP1_PERIPH_SPI2);

		/**SPI3 GPIO Configuration
		PC10     ------> SPI3_SCK
		PC11     ------> SPI3_MISO
		PC12     ------> SPI3_MOSI
		*/
		// ToDo: Deinitialize GPIO

		/* SPI3 interrupt DeInit */
		HAL_NVIC_DisableIRQ(SPI2_IRQn);
	}
}

void SPI::InitPeripheral(port_t port, uint32_t frequency)
{
	LL_GPIO_InitTypeDef GPIO_InitStruct = {0};
	bool firstTime = false;

	switch (port)
	{
		case PORT_SPI2:
			if (!resSPI2) {
				resSPI2 = new SPI::hardware_resource_t;
				memset(resSPI2, 0, sizeof(SPI::hardware_resource_t));
				firstTime = true;
			}
			_hRes = resSPI2;
			break;
		default:
			ERROR("Undefined SPI port");
			_hRes = 0;
			return;
	}

	if (firstTime) { // first time configuring peripheral
		_hRes->port = port;
		_hRes->frequency = frequency;
		_hRes->configured = false;
		_hRes->instances = 0;
	#ifdef USE_FREERTOS
		_hRes->resourceSemaphore = xSemaphoreCreateBinary();
		if (_hRes->resourceSemaphore == NULL) {
			ERROR("Could not create SPI resource semaphore");
			return;
		}
		vQueueAddToRegistry(_hRes->resourceSemaphore, "SPI Resource");
		xSemaphoreGive( _hRes->resourceSemaphore ); // give the semaphore the first time

		_hRes->transmissionFinished = xSemaphoreCreateBinary();
		if (_hRes->transmissionFinished == NULL) {
			ERROR("Could not create SPI transmission semaphore");
			return;
		}
		vQueueAddToRegistry(_hRes->transmissionFinished, "SPI Finish");
		xSemaphoreGive( _hRes->transmissionFinished ); // ensure that the semaphore is not taken from the beginning
		xSemaphoreTake( _hRes->transmissionFinished, ( TickType_t ) portMAX_DELAY ); // ensure that the semaphore is not taken from the beginning
	#else
		_hRes->transmissionFinished = true;
		_hRes->resourceSemaphore = false;
	#endif

		// Configure pins for SPI and SPI peripheral accordingly
		if (port == PORT_SPI2) {
			/* Peripheral clock enable */
			LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_SPI2);

			/**SPI3 GPIO Configuration
			PB13     ------> SPI2_SCK
			PB14     ------> SPI2_MISO
			PB15     ------> SPI2_MOSI
			*/
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOB);
			GPIO_InitStruct.Pin = LL_GPIO_PIN_13 | LL_GPIO_PIN_14 | LL_GPIO_PIN_15;
			GPIO_InitStruct.Speed = LL_GPIO_SPEED_HIGH;
			GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
			GPIO_InitStruct.Pull = LL_GPIO_PULL_DOWN;
			GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
			GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
			LL_GPIO_Init(GPIOB, &GPIO_InitStruct);

			/* SPI3 interrupt Init */
			NVIC_SetPriority(SPI2_IRQn, SPI_INTERRUPT_PRIORITY);
			NVIC_EnableIRQ(SPI2_IRQn);
		}
	}

	_hRes->instances++;
}

void SPI::InitChipSelect()
{
	LL_GPIO_InitTypeDef GPIO_InitStruct = {0};

	if (_csPort) { // general chip select configuration
		// Enable clock
		if (_csPort == GPIOA)
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOA); // __HAL_RCC_GPIOA_CLK_ENABLE();
	#ifdef GPIOB
		else if (_csPort == GPIOB)
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOB); // __HAL_RCC_GPIOB_CLK_ENABLE();
	#endif
	#ifdef GPIOC
		else if (_csPort == GPIOC)
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOC); // __HAL_RCC_GPIOC_CLK_ENABLE();
	#endif
	#ifdef GPIOD
		else if (_csPort == GPIOD)
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOD); // __HAL_RCC_GPIOD_CLK_ENABLE();
	#endif
	#ifdef GPIOE
		else if (_csPort == GPIOE)
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOE); // __HAL_RCC_GPIOE_CLK_ENABLE();
	#endif
	#ifdef GPIOF
		else if (_csPort == GPIOF)
			LL_AHB1_GRP1_EnableClock(LL_AHB1_GRP1_PERIPH_GPIOF); // __HAL_RCC_GPIOF_CLK_ENABLE();
	#endif
		else
		{
			_csPort = 0;
			return;
		}

		LL_GPIO_SetOutputPin(_csPort, _csPin); // set pin high after configuration = chip is NOT selected

		GPIO_InitStruct.Pin = _csPin;
		GPIO_InitStruct.Speed = LL_GPIO_SPEED_LOW;
		GPIO_InitStruct.Mode = LL_GPIO_MODE_OUTPUT;
		GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
		GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
		LL_GPIO_Init(_csPort, &GPIO_InitStruct);

	}
	else { // hardware chip select configuration
		if (!_hRes) return;
		GPIO_InitStruct.Speed = LL_GPIO_SPEED_LOW;
		GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
		GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
		GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
		GPIO_InitStruct.Alternate = LL_GPIO_AF_0;

		switch (_hRes->port) {
			case PORT_SPI2: // SPI2_NSS ------> PB12
				GPIO_InitStruct.Pin = LL_GPIO_PIN_12;
				LL_GPIO_Init(GPIOB, &GPIO_InitStruct);
				break;
			default:
				ERROR("Undefined SPI port");
				return;
		}
	}
}

void SPI::ConfigurePeripheral()
{
	LL_SPI_InitTypeDef SPI_InitStruct;

	if (!_hRes) return;

	if (!_hRes->configured) { // only configure periphiral once
		switch (_hRes->port) {
			case PORT_SPI2:
				_hRes->instance = SPI2;
				break;
			default:
				ERROR("Undefined SPI port");
				return;
		}

		_hRes->txRegSent = true;
		_hRes->txReg = 0;
		_hRes->txBuffer = 0;
		_hRes->rxBuffer = 0;
		_hRes->txBytesToWrite = 0;
		_hRes->rxBytesToRead = 0;
		_hRes->dummyReadBytesToSend = _hRes->rxBytesToRead;

		SPI_InitStruct.TransferDirection = LL_SPI_FULL_DUPLEX;
		SPI_InitStruct.Mode = LL_SPI_MODE_MASTER;
		SPI_InitStruct.DataWidth = LL_SPI_DATAWIDTH_8BIT;
		SPI_InitStruct.ClockPolarity = LL_SPI_POLARITY_HIGH;
		SPI_InitStruct.ClockPhase = LL_SPI_PHASE_2EDGE;
		if (_csPort)
			SPI_InitStruct.NSS = LL_SPI_NSS_SOFT; // general chip-select - we have decided not to support hardware chip-select (NSS pin)
		else
			SPI_InitStruct.NSS = LL_SPI_NSS_HARD_OUTPUT;
		SPI_InitStruct.BitOrder = LL_SPI_MSB_FIRST;
		SPI_InitStruct.CRCCalculation = LL_SPI_CRCCALCULATION_DISABLE;
		SPI_InitStruct.CRCPoly = 7;

		LL_RCC_ClocksTypeDef clocks;
		LL_RCC_GetSystemClocksFreq(&clocks);
		uint32_t SPI_Clock = clocks.PCLK1_Frequency; //HAL_RCC_GetPCLK1Freq();
		// Find the prescaler which matches the desired frequency best (rounding down)
		float prescaler = (float)SPI_Clock / _hRes->frequency;
		if (prescaler <= 2)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV2;
		else if (prescaler <= 4)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV4;
		else if (prescaler <= 8)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV8;
		else if (prescaler <= 16)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV16;
		else if (prescaler <= 32)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV32;
		else if (prescaler <= 64)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV64;
		else if (prescaler <= 128)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV128;
		else if (prescaler <= 256)
			SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV256;
		else
		{
			ERROR("SPI baud rate too low to be configurable");
			return;
		}

		if (LL_SPI_Init(_hRes->instance, &SPI_InitStruct) != SUCCESS)
		{
			ERROR("Could not initialize SPI port");
			return;
		}

		LL_SPI_SetRxFIFOThreshold(_hRes->instance, LL_SPI_RX_FIFO_TH_QUARTER);

		/* Enable SPI */
		LL_SPI_Enable(_hRes->instance);

#ifdef USE_FREERTOS
		osDelay(10); // wait 10 ms for clock to stabilize
#else
		HAL_Delay(10);
#endif

		_hRes->configured = true;
	}
}
