==> mindThomas/STM32-libraries/Periphirals/STM32H7/SPI/SPI.cpp <==
#include "SPI.h"
#include "stm32h7xx_hal.h"
#include "Priorities.h"
#include "Debug.h"
#include <math.h>
#include <string.h> // for memset

void SPI::DeInitPeripheral()
{
	if (!_hRes) return;
	if (_hRes->port == PORT_SPI3) {
		/* Peripheral clock disable */
		__HAL_RCC_SPI3_CLK_DISABLE();

		/**SPI3 GPIO Configuration
		PC10     ------> SPI3_SCK
		PC11     ------> SPI3_MISO
		PC12     ------> SPI3_MOSI
		*/
		HAL_GPIO_DeInit(GPIOC, GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12);

		/* SPI3 interrupt DeInit */
		HAL_NVIC_DisableIRQ(SPI3_IRQn);
	}
	else if (_hRes->port == PORT_SPI5)
	{
		/* Peripheral clock disable */
		__HAL_RCC_SPI5_CLK_DISABLE();

		/**SPI6 GPIO Configuration
		PG12     ------> SPI6_MISO
		PG13     ------> SPI6_SCK
		PG14     ------> SPI6_MOSI
		*/
		HAL_GPIO_DeInit(GPIOF, GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9);

		/* SPI6 interrupt DeInit */
		HAL_NVIC_DisableIRQ(SPI5_IRQn);
	}
	else if (_hRes->port == PORT_SPI6)
	{
		/* Peripheral clock disable */
		__HAL_RCC_SPI6_CLK_DISABLE();

		/**SPI6 GPIO Configuration
		PG12     ------> SPI6_MISO
		PG13     ------> SPI6_SCK
		PG14     ------> SPI6_MOSI
		*/
		HAL_GPIO_DeInit(GPIOG, GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14);

		/* SPI6 interrupt DeInit */
		HAL_NVIC_DisableIRQ(SPI6_IRQn);
	}
}

void SPI::InitPeripheral(port_t port, uint32_t frequency)
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};
	bool firstTime = false;

	switch (port)
	{
		case PORT_SPI3:
			if (!resSPI3) {
				resSPI3 = new SPI::hardware_resource_t;
				memset(resSPI3, 0, sizeof(SPI::hardware_resource_t));
				firstTime = true;
			}
			_hRes = resSPI3;
			break;
		case PORT_SPI5:
			if (!resSPI5) {
				resSPI5 = new SPI::hardware_resource_t;
				memset(resSPI3, 0, sizeof(SPI::hardware_resource_t));
				firstTime = true;
			}
			_hRes = resSPI5;
			break;
		case PORT_SPI6:
			if (!resSPI6) {
				resSPI6 = new SPI::hardware_resource_t;
				memset(resSPI3, 0, sizeof(SPI::hardware_resource_t));
				firstTime = true;
			}
			_hRes = resSPI6;
			break;
		default:
			ERROR("Undefined SPI port");
			_hRes = 0;
			return;
	}

	if (firstTime) { // first time configuring peripheral
		_hRes->port = port;
		_hRes->frequency = frequency;
		_hRes->configured = false;
		_hRes->instances = 0;
		_hRes->resourceSemaphore = xSemaphoreCreateBinary();
		if (_hRes->resourceSemaphore == NULL) {
			ERROR("Could not create SPI resource semaphore");
			return;
		}
		vQueueAddToRegistry(_hRes->resourceSemaphore, "SPI Resource");
		xSemaphoreGive( _hRes->resourceSemaphore ); // give the semaphore the first time

		_hRes->transmissionFinished = xSemaphoreCreateBinary();
		if (_hRes->transmissionFinished == NULL) {
			ERROR("Could not create SPI transmission semaphore");
			return;
		}
		vQueueAddToRegistry(_hRes->transmissionFinished, "SPI Finish");
		xSemaphoreGive( _hRes->transmissionFinished ); // ensure that the semaphore is not taken from the beginning
		xSemaphoreTake( _hRes->transmissionFinished, ( TickType_t ) portMAX_DELAY ); // ensure that the semaphore is not taken from the beginning

		// Configure pins for SPI and SPI peripheral accordingly
		if (port == PORT_SPI3) {
			__HAL_RCC_SPI3_CLK_ENABLE();
			/**SPI3 GPIO Configuration
			PC10     ------> SPI3_SCK
			PC11     ------> SPI3_MISO
			PC12     ------> SPI3_MOSI
			*/
			__HAL_RCC_GPIOC_CLK_ENABLE();
			GPIO_InitStruct.Pin = GPIO_PIN_10|GPIO_PIN_11|GPIO_PIN_12;
			GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
			GPIO_InitStruct.Pull = GPIO_NOPULL;
			GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
			GPIO_InitStruct.Alternate = GPIO_AF6_SPI3;
			HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);

			/* SPI3 interrupt Init */
			HAL_NVIC_SetPriority(SPI3_IRQn, SPI_INTERRUPT_PRIORITY, 0);
			HAL_NVIC_EnableIRQ(SPI3_IRQn);
		}
		else if (port == PORT_SPI5)
		{
			__HAL_RCC_SPI5_CLK_ENABLE();
			/**SPI3 GPIO Configuration
			PF7     ------> SPI5_SCK
			PF8     ------> SPI5_MISO
			PF9     ------> SPI5_MOSI
			*/
			__HAL_RCC_GPIOF_CLK_ENABLE();
			GPIO_InitStruct.Pin = GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9;
			GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
			GPIO_InitStruct.Pull = GPIO_NOPULL;
			GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
			GPIO_InitStruct.Alternate = GPIO_AF5_SPI5;
			HAL_GPIO_Init(GPIOF, &GPIO_InitStruct);

			/* SPI3 interrupt Init */
			HAL_NVIC_SetPriority(SPI5_IRQn, SPI_INTERRUPT_PRIORITY, 0);
			HAL_NVIC_EnableIRQ(SPI5_IRQn);
		}
		else if (port == PORT_SPI6)
		{
			/* Peripheral clock enable */
			__HAL_RCC_SPI6_CLK_ENABLE();
			/**SPI6 GPIO Configuration
			PG12     ------> SPI6_MISO
			PG13     ------> SPI6_SCK
			PG14     ------> SPI6_MOSI
			*/
			__HAL_RCC_GPIOG_CLK_ENABLE();
			GPIO_InitStruct.Pin = GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14;
			GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
			GPIO_InitStruct.Pull = GPIO_NOPULL;
			GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
			GPIO_InitStruct.Alternate = GPIO_AF5_SPI6;
			HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);

			/* SPI6 interrupt Init */
			HAL_NVIC_SetPriority(SPI6_IRQn, SPI_INTERRUPT_PRIORITY, 0);
			HAL_NVIC_EnableIRQ(SPI6_IRQn);
		}
	}

	_hRes->instances++;
}

void SPI::InitChipSelect()
{
	if (_csPort) { // general chip select configuration
		// Enable clock
		if (_csPort == GPIOA)
			__HAL_RCC_GPIOA_CLK_ENABLE();
		else if (_csPort == GPIOB)
			__HAL_RCC_GPIOB_CLK_ENABLE();
		else if (_csPort == GPIOC)
			__HAL_RCC_GPIOC_CLK_ENABLE();
		else if (_csPort == GPIOD)
			__HAL_RCC_GPIOD_CLK_ENABLE();
		else if (_csPort == GPIOE)
			__HAL_RCC_GPIOE_CLK_ENABLE();
		else if (_csPort == GPIOF)
			__HAL_RCC_GPIOF_CLK_ENABLE();
		else if (_csPort == GPIOG)
			__HAL_RCC_GPIOG_CLK_ENABLE();
		else if (_csPort == GPIOH)
			__HAL_RCC_GPIOH_CLK_ENABLE();

		HAL_GPIO_WritePin(_csPort, _csPin, GPIO_PIN_SET); // set pin high after configuration = chip is NOT selected

		GPIO_InitTypeDef GPIO_InitStruct = {0};
		GPIO_InitStruct.Pin = _csPin;
		GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
		HAL_GPIO_Init(_csPort, &GPIO_InitStruct);

	}
	else { // hardware chip select configuration
		if (!_hRes) return;
		GPIO_InitTypeDef GPIO_InitStruct = {0};
		GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
		GPIO_InitStruct.Pull = GPIO_NOPULL;
		GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
		GPIO_InitStruct.Alternate = GPIO_AF5_SPI6;

		switch (_hRes->port) {
			case PORT_SPI3: // hardware SPI not defined (for now)
				ERROR("Hardware chip-select for SPI3 is not defined");
				return;
			case PORT_SPI5: // hardware SPI not defined (for now)
				ERROR("Hardware chip-select for SPI5 is not defined");
				return;
			case PORT_SPI6: // SPI6_NSS ------> PG8
				GPIO_InitStruct.Pin = GPIO_PIN_8;
				HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);
				break;
			default:
				ERROR("Undefined SPI port");
				return;
		}
	}
}

void SPI::ConfigurePeripheral()
{
	if (!_hRes) return;
	if (!_hRes->configured) { // only configure periphiral once
		switch (_hRes->port) {
			case PORT_SPI3:
				_hRes->handle.Instance = SPI3;
				break;
			case PORT_SPI5:
				_hRes->handle.Instance = SPI5;
				break;
			case PORT_SPI6:
				_hRes->handle.Instance = SPI6;
				break;
			default:
				ERROR("Undefined SPI port");
				return;
		}

		_hRes->handle.Init.Mode = SPI_MODE_MASTER;
		_hRes->handle.Init.Direction = SPI_DIRECTION_2LINES;
		_hRes->handle.Init.DataSize = SPI_DATASIZE_8BIT;
		_hRes->handle.Init.CLKPolarity = SPI_POLARITY_HIGH;
		_hRes->handle.Init.CLKPhase = SPI_PHASE_2EDGE;
		_hRes->handle.Init.FirstBit = SPI_FIRSTBIT_MSB;
		_hRes->handle.Init.TIMode = SPI_TIMODE_DISABLE;
		_hRes->handle.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
		_hRes->handle.Init.CRCPolynomial = 7;
		_hRes->handle.Init.NSS = SPI_NSS_SOFT;  // general chip-select - we have decided not to support hardware chip-select (NSS pin)
		_hRes->handle.Init.NSSPMode = SPI_NSS_PULSE_DISABLE;
		_hRes->handle.Init.NSSPolarity = SPI_NSS_POLARITY_LOW;
		_hRes->handle.Init.FifoThreshold = SPI_FIFO_THRESHOLD_01DATA;
		_hRes->handle.Init.TxCRCInitializationPattern = SPI_CRC_INITIALIZATION_ALL_ZERO_PATTERN;
		_hRes->handle.Init.RxCRCInitializationPattern = SPI_CRC_INITIALIZATION_ALL_ZERO_PATTERN;
		_hRes->handle.Init.MasterSSIdleness = SPI_MASTER_SS_IDLENESS_00CYCLE;
		_hRes->handle.Init.MasterInterDataIdleness = SPI_MASTER_INTERDATA_IDLENESS_00CYCLE;
		_hRes->handle.Init.MasterReceiverAutoSusp = SPI_MASTER_RX_AUTOSUSP_DISABLE;
		_hRes->handle.Init.MasterKeepIOState = SPI_MASTER_KEEP_IO_STATE_ENABLE;
		_hRes->handle.Init.IOSwap = SPI_IO_SWAP_DISABLE;

		uint32_t SPI_Clock = HAL_RCCEx_GetPeriphCLKFreq(RCC_PERIPHCLK_SPI123); // assuming all SPI periphirals to be configured with the same clock frequency!!!
		// Find the prescaler which matches the desired frequency best (rounding down)
		float prescaler = (float)SPI_Clock / _hRes->frequency;
		if (prescaler <= 2)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
		else if (prescaler <= 4)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_4;
		else if (prescaler <= 8)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_8;
		else if (prescaler <= 16)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_16;
		else if (prescaler <= 32)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;
		else if (prescaler <= 64)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_64;
		else if (prescaler <= 128)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_128;
		else if (prescaler <= 256)
			_hRes->handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_256;
		else
		{
			ERROR("SPI baud rate too low to be configurable");
			return;
		}

		if (HAL_SPI_Init(&_hRes->handle) != HAL_OK)
		{
			ERROR("Could not initialize SPI port");
			return;
		}

		osDelay(10); // wait 10 ms for clock to stabilize

		_hRes->configured = true;
	}
}
